# claude-context-local

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .ruffignore  .typos.toml  BASH_STYLE_GUIDE.md  CALL_GRAPH_RESOLUTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Commit  GEMINI.md  LICENSE  MEMORY.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_PROGRESS_SUMMARY.md  MIGRATION_STATUS.md  MIGRATION_STATUS_FINAL.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PR_RECOMMENDATION.md  README.md  SESSION_LOG.md  SLASH_COMMAND_TESTING_PROTOCOL.md  TEST_v4_VERIFICATION.md  Workflow  before-cleanup-packages.txt  cgw.conf.example  clean_pycache.cmd  commit.bat  env.example  install-windows.bat  install-windows.cmd  launch-local-llm.cmd  pyproject.toml  pyrefly.toml  pytest.ini  response1.md  (+13 more)
.charlie/: config.yml
.gemini/: settings.json
.githooks/: README.md  pre-commit
_archive/: README.md
analysis/: BM25_FOLDER_ISSUE_INVESTIGATION.md  CODERANKEMBED_LLM_FINDINGS.md  COMPREHENSIVE_FEATURE_TEST_REPORT.md  FINAL_MODEL_EVALUATION.md  MCP_Tool_Issue.md  MODEL_COMPARISON_REPORT.md  MODEL_COMPARISON_RESULTS.json  MULTI_HOP_COMPARISON.md  MULTI_HOP_RECOMMENDATIONS.md  QODO_VS_BGE_M3_EVALUATION.md  RECOMMENDATIONS_v0.5.2.md  STEMMING_VALIDATION_REPORT.md  comparison_results.json  comprehensive_feature_test_results.json  mcp_multi_model_verification_report.md  model_relevance_comparison.md  model_relevance_verification_results.md  multi_model_routing_test_results.md  preset_comparison_results.json  quick_model_comparison.json  stemming_comparison_results.json
audit_reports/: README.md
chunking/: __init__.py  community_remerge.py  dedent_utils.py  file_summarizer.py  language_registry.py  multi_language_chunker.py  python_ast_chunker.py  repo_profiler.py  tree_sitter.py
code-search-extension/: code-search.mcpb  manifest.json  package.json
config/: intent_anchors.yaml  intent_rules.yaml  routing_keywords.yaml
docs/: ADVANCED_FEATURES_GUIDE.md  BENCHMARKS.md  CALL_GRAPH_TUNING.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_MD_TEMPLATE.md  CODE_REVIEW_IMPROVEMENT_PLAN.md  CODE_REVIEW_IMPROVEMENT_PLAN_V2.md  DOCUMENTATION_INDEX.md  DSPY_SETUP.md  GIT_WORKFLOW.md  Git Workflow Strategy for claude-context.md  HYBRID_SEARCH_CONFIGURATION_GUIDE.md  INSTALLATION_GUIDE.md  MCP_TOOLS_REFERENCE.md  MODEL_MIGRATION_GUIDE.md  OBSERVABILITY.md  PRE_COMMIT_HOOKS.md  PYTORCH_COMPATIBILITY.md  PYTORCH_UPGRADE_GUIDE.md  RELATIONSHIP_TYPES_IMPLEMENTATION.md  TESTING_GUIDE.md  VERSION_HISTORY.md  VSCODE_SETUP.md  claude_code_config.md
embeddings/: chunk_metadata.py  embedder.py  model_cache.py  model_loader.py  onnx_loader.py  onnx_wrapper.py  query_cache.py
evaluation/: README.md  __init__.py  base_evaluator.py  callee_golden.json  caller_golden.json  chunk_mapping.py  dspy_agent_eval.py  dspy_gepa_optimize.py  golden_dataset.json  metrics.py  parameter_optimizer.py  raw_mcp_results_bm25.json  raw_mcp_results_hybrid.json  raw_mcp_results_semantic.json  run_bge_m3_benchmark.py  run_evaluation.py  semantic_evaluator.py  swe_bench_evaluator.py  token_efficiency_evaluator.py
gemini-skills/: mcp-search-tool.skill
graph/: __init__.py  call_graph_extractor.py  community_detector.py  community_summarizer.py  graph_queries.py  graph_storage.py  relation_filter.py  relationship_types.py  schema.py
logs/: Comprehensive_testing_log.md  Force Reindex Project_LOG.md  bash_scripts_commit_merge_analysis_20251005_185155.md  commit_enhanced_analysis_20251119_0256.md  commit_enhanced_analysis_20251120_0246.md  commit_enhanced_analysis_20251120_0255.md  commit_enhanced_analysis_20251120_0258.md  commit_enhanced_analysis_20251120_0347.md  commit_enhanced_analysis_20251120_0940.md  commit_enhanced_analysis_20251125_0301.md  commit_enhanced_analysis_20251125_0304.md  commit_enhanced_analysis_20251125_0310.md  commit_enhanced_analysis_20251125_0320.md  commit_enhanced_analysis_20251125_0521.md  commit_enhanced_analysis_20251126_0437.md  commit_enhanced_analysis_20251127_0942.md  commit_enhanced_analysis_20251128_0319.md  commit_enhanced_analysis_20251128_0341.md  commit_enhanced_analysis_20251128_0344.md  commit_enhanced_analysis_20251128_0750.md  commit_enhanced_analysis_20251128_1054.md  commit_enhanced_analysis_20251128_1205.md  commit_enhanced_analysis_20251128_1227.md  commit_enhanced_analysis_20251128_1239.md  commit_enhanced_analysis_20251128_1243.md  commit_enhanced_analysis_20251207_214036.md  commit_enhanced_analysis_20251208_004307.md  commit_enhanced_analysis_20251208_010507.md  commit_enhanced_analysis_20251208_020538.md  commit_enhanced_analysis_20251208_024028.md  commit_enhanced_analysis_20251208_114744.md  commit_enhanced_analysis_20251208_115858.md  commit_enhanced_analysis_20251208_135331.md  commit_enhanced_analysis_20251208_140208.md  commit_enhanced_analysis_20251208_224825.md  commit_enhanced_analysis_20251208_230331.md  commit_enhanced_analysis_20251208_234705.md  commit_enhanced_analysis_20251209_011321.md  commit_enhanced_analysis_20251209_092931.md  commit_enhanced_analysis_20251209_093409.md  (+88 more)
mcp_server/: cleanup_queue.py  guidance.py  metrics.py  model_pool_manager.py  output_formatter.py  project_persistence.py  resource_manager.py  search_factory.py  server.py  server_lowlevel.py  server_lowlevel_complete.py  services.py  state.py  storage_manager.py  tool_handlers.py  tool_registry.py
merkle/: __init__.py  change_detector.py  merkle_dag.py  snapshot_manager.py
results/: caller_recall_pyan.json
scripts/: __init__.py  antigravity_bridge.py  dspy_mcp_demo.py  get_current_project.py  get_system_status.py  get_system_status_fast.py  list_projects_display.py  list_projects_parseable.py  manual_configure.py  verify_hf_auth.py  verify_installation.py
search/: __init__.py  base_searcher.py  batch_operations.py  bm25_index.py  bm25_sync.py  centrality_ranker.py  chunk_id.py  community_refresh_stage.py  community_stage.py  config.py  config_paths.py  dimension_validator.py  ego_graph_retriever.py  exceptions.py  faiss_index.py  filters.py  gpu_monitor.py  (+30 more)
(+1344 files in other folders)
