[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-context-local"
version = "0.11.7"
description = "Local semantic code search for Claude Code (MCP) using multi-model routing (Qwen3, BGE-M3, CodeRankEmbed), FAISS, and AST/tree-sitter chunking. 100% local embeddings and indexing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "forkni", email = "forkni@gmail.com" }
]
maintainers = [
    { name = "forkni", email = "forkni@gmail.com" }
]
keywords = [
    "semantic-search",
    "code-search",
    "embeddings",
    "faiss",
    "mcp",
    "claude",
    "tree-sitter",
    "chunking",
    "python",
]
dependencies = [
    "aiohttp>=3.13.5",  # Security: Fixes CVE-2025-69223 through CVE-2025-69230
    "einops>=0.8.0",  # Required for CodeRankEmbed model
    "faiss-cpu>=1.13.2",
    "fsspec[http]>=2024.2.0,<=2025.10.0",  # Upper bound: datasets 4.4.2 constraint
    "huggingface-hub>=0.36.0",
    "mcp>=1.27.0",
    "networkx>=3.0",  # Required for graph storage and community detection
    "nltk>=3.9.4",  # Security: Fixes CVE-2025-14009 (path traversal in downloader)
    "psutil>=7.2.1",
    "rank-bm25>=0.2.2",
    "torch>=2.8.0,<2.9.0",  # 2.9.x breaks ModernBERT torch.compile (template conflict)
    "rich>=14.3.3",
    "sentence-transformers>=5.2.2",
    "transformers>=4.51.0,<4.58.0",  # >=4.51 for Qwen3; <4.58 required by optimum-onnx ONNX compatibility
    "sqlitedict>=2.1.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-glsl>=0.2.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
    "tiktoken>=0.12.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-repeat>=0.9.4",
]
dev = [
    "ruff>=0.15.10",
    "pip-audit>=2.10.0",
    "pip-licenses>=5.5.5",
    "pipdeptree>=2.34.0",
    "pre-commit>=4.5.1",
]
profile = [
    "snoop>=0.6.0",
    "py-heat>=0.0.6",
]
onnx = [
    "optimum[onnxruntime-gpu]>=1.25.0",
]
# NOTE: optimum[onnxruntime-gpu] caps transformers<4.58.0. This is why
# transformers is pinned to >=4.51.0,<4.58.0 in the main dependencies.
# Install: uv pip install -e .[onnx]
# See tools/convert_onnx.py for standalone conversion usage.

[project.urls]
Homepage = "https://github.com/forkni/claude-context-local"
Repository = "https://github.com/forkni/claude-context-local"
Documentation = "https://github.com/forkni/claude-context-local#readme"
Issues = "https://github.com/forkni/claude-context-local/issues"
Changelog = "https://github.com/forkni/claude-context-local/blob/main/docs/VERSION_HISTORY.md"

[tool.setuptools.packages.find]
include = ["chunking*", "embeddings*", "graph*", "mcp_server*", "merkle*", "search*", "utils*"]

# Security: Minimum versions for CVE fixes
# Direct dependencies: Updated in dependencies list above
# Transitive dependencies: Installed automatically, documented here for tracking
# Last audit: 2026-04-16 (pip-audit - 2 advisories: sqlitedict CVE-2024-35515 mitigated,
#             transformers CVE-2026-1839 blocked by optimum-onnx <4.58.0 pin)
#
# Direct dependency security updates:
# mcp>=1.27.0        # Fixes CVE-2025-66416 (DNS rebinding vulnerability)
# nltk>=3.9.4        # Fixes CVE-2025-14009 (path traversal in zipfile.extractall)
# aiohttp>=3.13.5    # Fixes CVE-2025-69223 through CVE-2025-69230
#
# Transitive dependency security updates:
# pip>=26.0.1              # Fixes CVE-2025-8869 (tarfile path traversal), CVE-2026-1703
# python-multipart>=0.0.26 # Fixes CVE-2026-24486 (path traversal), CVE-2026-40347 (DoS in multipart parser)
# pygments>=2.20.0         # Fixes CVE-2026-4539 (ReDoS in AdlLexer)
# pyjwt>=2.12.0            # Fixes CVE-2026-32597 (JWS crit header not validated)
# requests>=2.33.0         # Fixes CVE-2026-25645 (predictable tempfile name)
# starlette>=0.51.0        # Fixes CVE (version: 0.47.3 → 0.51.0)
# uv>=0.11.6               # Fixes 2 CVEs (version: 0.8.21 → 0.9.6)
# werkzeug>=3.1.4          # Fixes CVE-2025-66221 (Windows device name handling)
# wheel>=0.46.3            # Fixes CVE-2026-24049 (path traversal in unpack)
#
# Verification: .venv/Scripts/pip-audit --format json | .venv/Scripts/python.exe tools/summarize_audit.py
#
# Safe patch updates (tested 2026-04-16):
# * pygments (2.19.2 -> 2.20.0), pyjwt (2.10.1 -> 2.12.0), requests (2.32.5 -> 2.33.0).
# * python-multipart (0.0.22 -> 0.0.26).
# * Orphans removed: cryptography, typer-slim, shellingham (no dependents; eliminated 2 CVEs).
# Tested: 1987 unit tests pass, pip check passed.
# Remaining CVEs: 2 (sqlitedict CVE-2024-35515 - no upstream fix, mitigated via JSON serialization in metadata.py;
#                    transformers CVE-2026-1839 - fix requires 5.0.0rc3, blocked by optimum-onnx <4.58.0 pin).

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Legacy CUDA 12.4 index (fallback for older systems)
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# CUDA 12.8 (recommended for RTX 50 series and newer GPUs)
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Code quality tools configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "_archive",
    "build",
    "dist",
    "__pycache__",
    "tests/test_data",  # Sample code for testing, not production code
    "*.cmd",  # Batch files
    "*.bat",  # Batch files
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (replaces standalone isort)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming (catches PascalCase functions, snake_case classes)
    "UP",  # pyupgrade (auto-fixes Optional->|None, Dict->dict)
    "SIM", # flake8-simplify (catches simplifiable patterns)
]
ignore = [
    "C901",  # McCabe complexity - skip for faster checks (diffusers pattern)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Imports inside try-except blocks cause conflicts between ruff and isort
"tests/integration/test_mcp_functionality.py" = ["I001"]
"tests/integration/test_token_efficiency_workflow.py" = ["I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["chunking", "embeddings", "mcp_server", "search", "merkle", "evaluation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"