[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-context-local"
version = "0.20.1"
description = "Local semantic code search for Claude Code (MCP) using FAISS, hybrid BM25+semantic search, and AST/tree-sitter chunking. 100% local embeddings and indexing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "forkni", email = "forkni@gmail.com" }
]
maintainers = [
    { name = "forkni", email = "forkni@gmail.com" }
]
keywords = [
    "semantic-search",
    "code-search",
    "embeddings",
    "faiss",
    "mcp",
    "claude",
    "tree-sitter",
    "chunking",
    "python",
]
dependencies = [
    "aiohttp>=3.14.1",  # Security: Fixes CVE-2026-34993, CVE-2026-47265, CVE-2026-50269 (3.14.0); CVE-2026-54273..54280 (3.14.1)
    "cryptography>=46.0.7",  # Security: PYSEC-2026-35/36 (DNS name-constraint bypass, buffer overflow). Defer GHSA-537c (OpenSSL wheel, needs 48.x major bump).
    "einops>=0.8.0",  # Required for CodeRankEmbed model
    "faiss-cpu>=1.14.3",
    "fsspec[http]>=2024.2.0,<=2025.10.0",  # Upper bound: datasets 4.4.2 constraint
    "huggingface-hub>=0.36.0",
    "idna>=3.15",  # Security: CVE-2026-45409
    "mcp>=1.27.0,<2",  # <2: mcp v2 (beta 2026-06-30) has breaking changes
    "msgpack>=1.2.1",  # Security: GHSA-6v7p-g79w-8964 (SEGV on repeated unpack after error)
    "networkx>=3.0",  # Required for graph storage and community detection
    "nltk>=3.9.4",  # Security: Fixes CVE-2025-14009 (path traversal in downloader)
    "psutil>=7.2.1",
    "pydantic-settings>=2.14.2",  # Security: GHSA-4xgf-cpjx-pc3j (symlink follow in secrets_dir)
    "pygments>=2.20.0",  # Security: CVE-2026-4539 (ReDoS in AdlLexer)
    "pyjwt>=2.13.0",  # Security: 9 CVEs incl CVE-2026-32597 crit-header, CVE-2026-48522..48526
    "python-dotenv>=1.2.2",  # Security: Fixes CVE-2026-28684 (symlink follow in set_key/unset_key)
    "python-multipart>=0.0.31",  # Security: CVE-2026-40347/42561/53538/53539/53540 (multipart DoS)
    "rank-bm25>=0.2.2",
    "requests>=2.33.0",  # Security: CVE-2026-25645 (predictable temp filename in extract_zipped_paths)
    "rich>=14.3.3",
    "sentence-transformers>=5.6.0",
    "sqlitedict>=2.1.0",
    "starlette>=1.3.1",  # Security: Fixes PYSEC-2026-161 (1.0.1), CVE-2026-48817/48818 (1.1.0), CVE-2026-54282 (1.3.0), CVE-2026-54283 (1.3.1)
    "tiktoken>=0.12.0",
    "torch>=2.8.0,<2.9.0",  # 2.9.x breaks ModernBERT torch.compile (template conflict)
    "transformers>=4.51.0,<4.58.0",  # >=4.51 for Qwen3; <4.58 required by optimum-onnx ONNX compatibility
    "tree-sitter>=0.25.0",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-glsl>=0.2.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
    "urllib3>=2.7.0",  # Security: CVE-2026-44431/44432 (redirect + over-decompression)
    "dspy>=3.2.1",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
callgraph = [
    # pyan3: GPL-2.0-only; kept as an optional extra so the Apache-2.0 core
    # distribution remains licence-clean.  Provides whole-project cross-module
    # call edges (recall booster on top of the in-house AST extractor).
    "pyan3>=2.6.0",
    # libcst: MIT; FullyQualifiedNameProvider cross-file resolution (Stage 2).
    "libcst>=1.8.6",
]
lsp = [
    # basedpyright: MIT; pip-installable, bundles the node runtime.
    # Provides the highest-accuracy call hierarchy via LSP JSON-RPC (Stage 3, opt-in).
    "basedpyright>=1.21",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-repeat>=0.9.4",
    "pytest-randomly>=3.15.0",  # Phase 2: order-randomisation; exposes hidden ordering deps
    "pytest-xdist>=3.6.0",      # Phase 2/CI: parallel test execution (-n auto)
    "syrupy>=4.0.0",             # Phase 4: snapshot/golden-file regression testing
]
dev = [
    "ruff>=0.15.20",
    "pip-audit>=2.10.1",
    "pip-licenses>=5.5.5",
    "pipdeptree>=2.34.0",
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "mutmut>=2.5.1",  # Phase 4.2: mutation testing; run periodically, not per-commit (Linux CI only)
    "cosmic-ray>=8.4",  # Phase 4.2: mutation testing; local cross-platform runner
]
profile = [
    "snoop>=0.6.0",
    "py-heat>=0.0.6",
]
onnx = [
    "optimum[onnxruntime-gpu]>=1.25.0",
]
# NOTE: optimum[onnxruntime-gpu] caps transformers<4.58.0. This is why
# transformers is pinned to >=4.51.0,<4.58.0 in the main dependencies.
# Install: uv pip install -e .[onnx]
# See tools/convert_onnx.py for standalone conversion usage.
gpu = [
    # nvidia-ml-py (pynvml): NVML bindings for device-level GPU memory reporting.
    # Used by _get_nvml_used_bytes() (model_loader.py) and _check_vram_status()
    # on the ONNX path (#53/#56).  Separate from the onnx extra so PyTorch-path
    # users can also get accurate VRAM readings without the ONNX runtime.
    # Install: uv pip install -e .[gpu]
    "nvidia-ml-py>=12.535.77",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
# Install: uv pip install -e .[otel]
# Then set CLAUDE_OTEL_ENABLED=true to activate tracing.

[project.urls]
Homepage = "https://github.com/forkni/claude-context-local"
Repository = "https://github.com/forkni/claude-context-local"
Documentation = "https://github.com/forkni/claude-context-local#readme"
Issues = "https://github.com/forkni/claude-context-local/issues"
Changelog = "https://github.com/forkni/claude-context-local/blob/main/docs/VERSION_HISTORY.md"

[tool.setuptools.packages.find]
include = ["chunking*", "embeddings*", "graph*", "mcp_server*", "merkle*", "search*", "utils*"]

# Security: Minimum versions for CVE fixes
# Direct dependencies: Updated in dependencies list above
# Transitive dependencies: Installed automatically, documented here for tracking
# Last audit: 2026-06-24 (pip-audit - 5 advisories remain: transformers 2×RCE blocked by optimum-onnx pin,
#             diskcache/sqlitedict/pyjwt 3 with no upstream fix)
#
# Direct dependency security updates:
# mcp>=1.27.0,<2       # Fixes CVE-2025-66416 (DNS rebinding); <2 guards against mcp v2 breaking changes (beta 2026-06-30)
# nltk>=3.9.4          # Fixes CVE-2025-14009 (path traversal in zipfile.extractall)
# aiohttp>=3.14.1      # Fixes CVE-2026-34993, CVE-2026-47265, CVE-2026-50269 (3.14.0); CVE-2026-54273..54280 (3.14.1)
# python-dotenv>=1.2.2 # Fixes CVE-2026-28684 (symlink follow in set_key/unset_key)
# starlette>=1.3.1     # Fixes PYSEC-2026-161 (1.0.1), CVE-2026-48817/48818 (1.1.0), CVE-2026-54282 (1.3.0), CVE-2026-54283 (1.3.1)
#
# Transitive dependency security updates:
# cryptography>=46.0.7     # Fixes CVE-2026-34073 (46.0.6 DNS name-constraint), CVE-2026-39892 (46.0.7 buffer overflow)
# idna>=3.18               # Fixes CVE-2026-45409 (incomplete fix of CVE-2024-3651, DoS in idna.encode)
# msgpack>=1.2.1           # Fixes GHSA-6v7p-g79w-8964 (repeated unpacker SEGV)
# pip>=26.1.1              # Fixes CVE-2025-8869, CVE-2026-1703, CVE-2026-3219, CVE-2026-6357
# pillow>=12.2.0           # Fixes CVE-2026-40192, CVE-2026-42308, CVE-2026-42309, CVE-2026-42310, CVE-2026-42311
# pydantic-settings>=2.14.2 # Fixes GHSA-4xgf-cpjx-pc3j (symlink follow in NestedSecretsSettingsSource)
# pygments>=2.20.0         # Fixes CVE-2026-4539 (ReDoS in AdlLexer)
# pyjwt>=2.13.0            # Fixes CVE-2026-32597 (2.12.0), 4× CVEs (2.13.0: 48522/48524/48525/48526)
# python-multipart>=0.0.32 # Fixes CVE-2026-24486, CVE-2026-40347, CVE-2026-42561, CVE-2026-53538, CVE-2026-53539, CVE-2026-53540 (DoS)
# requests>=2.34.2         # Fixes CVE-2026-25645 (predictable tempfile name)
# urllib3>=2.7.0           # Fixes CVE-2026-44431 (cross-origin redirect), CVE-2026-44432 (decompression)
# uv>=0.11.24              # Fixes GHSA-4gg8-gxpx-9rph (0.11.15, malicious-wheel path traversal)
# werkzeug>=3.1.4          # Fixes CVE-2025-66221 (Windows device name handling)
# wheel>=0.46.3            # Fixes CVE-2026-24049 (path traversal in unpack)
#
# Deferred (no upstream fix):
# * transformers CVE-2026-1839, PYSEC-2025-217 (Trainer/X-CLIP RCE) — fix needs 5.0.0rc3, blocked by optimum-onnx <4.58.0 pin; not applicable (no Trainer use)
# * diskcache CVE-2025-69872, sqlitedict CVE-2024-35515 (pickle RCE) — no upstream fix; sqlitedict mitigated via JSON serialization (metadata.py)
# * pyjwt PYSEC-2025-183 (disputed weak encryption) — no upstream fix
#
# Verification: .venv/Scripts/pip-audit --format json | .venv/Scripts/python.exe tools/summarize_audit.py
#
# Safe patch updates (tested 2026-06-24):
# * starlette (0.52.1 → 1.3.1): Starlette 1.x breaking changes (on_startup/on_shutdown removal, @app.route()
#   decorator) do not apply — server.py uses Starlette(routes=[Route(...)], lifespan=) which is the 1.0 canonical
#   API. Live HTTP transport verified: POST /cleanup 200, POST /mcp 406 (correct MCP protocol rejection, not 307),
#   sse-starlette 3.2.0 ping confirmed. pip check passed.
# * aiohttp (3.13.5 → 3.14.1), cryptography (46.0.5 → 46.0.7), idna (3.11 → 3.18), msgpack (1.1.2 → 1.2.1)
# * pydantic-settings (2.12.0 → 2.14.2), pygments (2.19.2 → 2.20.0), pyjwt (2.10.1 → 2.13.0)
# * python-dotenv (1.2.1 → 1.2.2), python-multipart (0.0.22 → 0.0.32), requests (2.32.5 → 2.34.2)
# * urllib3 (2.6.3 → 2.7.0), uv (0.11.6 → 0.11.24)
# Tested: 2620 unit tests pass, pip check passed.
# Remaining CVEs: 5 (down from 53)
#
# Safe patch updates (tested 2026-06-03):
# * pyjwt (2.12.1 -> 2.13.0), uv (0.11.6 -> 0.11.18).
# Tested: 2345 unit tests pass, pip check passed.
#
# Safe patch updates (tested 2026-05-29):
# * idna (3.11 -> 3.17) - fixes CVE-2026-45409.
# Tested: 2340 unit tests pass, pip check passed.
#
# Safe patch updates (tested 2026-05-25):
# * python-multipart (0.0.24 -> 0.0.27), pillow (12.1.1 -> 12.2.0), pip (26.0.1 -> 26.1.1).
# * requests (2.33.1 -> 2.34.2), urllib3 (2.6.3 -> 2.7.0).
# * Orphan removed: PyPDF2 3.0.1 (deprecated, unused).
# Tested: 2089 unit tests pass, pip check passed.

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Legacy CUDA 12.4 index (fallback for older systems)
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# CUDA 12.8 (recommended for RTX 50 series and newer GPUs)
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Code quality tools configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "_archive",
    "build",
    "dist",
    "__pycache__",
    "tests/test_data",  # Sample code for testing, not production code
    "*.cmd",  # Batch files
    "*.bat",  # Batch files
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (replaces standalone isort)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming (catches PascalCase functions, snake_case classes)
    "UP",  # pyupgrade (auto-fixes Optional->|None, Dict->dict)
    "SIM", # flake8-simplify (catches simplifiable patterns)
]
ignore = [
    "C901",  # McCabe complexity - skip for faster checks (diffusers pattern)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Imports inside try-except blocks cause conflicts between ruff and isort
"tests/integration/test_mcp_functionality.py" = ["I001"]
"tests/integration/test_token_efficiency_workflow.py" = ["I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["chunking", "embeddings", "mcp_server", "search", "merkle", "evaluation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project-includes = [
    "search/**/*.py",
    "mcp_server/**/*.py",
    "chunking/**/*.py",
    "graph/**/*.py",
    "embeddings/**/*.py",
    "merkle/**/*.py",
    "utils/**/*.py",
    "evaluation/**/*.py",
]
project-excludes = [
    "**/__pycache__",
    "**/.venv/**",
    "**/site-packages/**",
    "_archive/**",
    "tests/**",
    "scripts/**",
    "tools/**",
    ".claude/**",
    "profiler_logs/**",
    "logs/**",
]

python-version = "3.11"
python-platform = "win32"

check-unannotated-defs = true
infer-return-types = "checked"
preset = "default"
permissive-ignores = true

replace-imports-with-any = [
    "faiss",
    "torch", "torch.*",
    "transformers", "transformers.*",
    "sentence_transformers", "sentence_transformers.*",
    "tree_sitter", "tree_sitter.*",
    "tree_sitter_python", "tree_sitter_javascript", "tree_sitter_typescript",
    "tree_sitter_go", "tree_sitter_rust", "tree_sitter_c", "tree_sitter_cpp",
    "tree_sitter_c_sharp", "tree_sitter_glsl",
    "rank_bm25", "rank_bm25.*",
    "tiktoken",
    "onnxruntime", "onnxruntime.*",
    "networkx", "networkx.*",
    "optimum", "optimum.*",
    "snoop", "py_heat",
    "pyan", "pyan.*",
]

[[tool.pyrefly.sub-config]]
matches = "chunking/languages/**"
errors = { missing-attribute = "warn", missing-import = "warn", bad-argument-type = "warn" }

[[tool.pyrefly.sub-config]]
matches = "graph/relationship_extractors/**"
errors = { missing-attribute = "warn", bad-argument-type = "warn" }

[[tool.pyrefly.sub-config]]
matches = "mcp_server/tools/**"
errors = { missing-attribute = "warn", bad-argument-type = "warn" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# ---------------------------------------------------------------------------
# Testing infrastructure
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10",
    "--import-mode=importlib",  # pytest docs recommendation for new projects; avoids sys.path hacks
]
pythonpath = ["."]  # project root; makes packages importable without sys.path.insert in conftest
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "mcp: MCP server related tests",
    "embeddings: Embedding generation tests",
    "chunking: Code chunking tests",
    "search: Search functionality tests",
    "asyncio: Mark test as async (pytest-asyncio)",
    "gpu: Requires CUDA device (skipped when absent)",
    "e2e: Full end-to-end workflow",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore:.*unclosed.*:ResourceWarning",
    "ignore:.*builtin type.*:DeprecationWarning",
    "ignore:Not enough free disk space.*:UserWarning:huggingface_hub",
]

# ---------------------------------------------------------------------------
# Coverage (branch coverage on; run: pytest --cov --cov-branch --cov-report=term-missing)
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "chunking",
    "embeddings",
    "graph",
    "mcp_server",
    "merkle",
    "search",
    "utils",
    "evaluation",
]
# core = "sysmon"  # Uncomment for ~3x faster coverage on Python 3.12+

[tool.coverage.report]
show_missing = true
fail_under = 77  # Ratcheted 2026-06-30: 78.53% measured at 3104 passing tests (branch coverage)
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
